Handle another approach to split long test
Signed-off-by: Viet Nguyen Duc <viet.dnguyen@katalon.com>